# framework-portduino

./: .gitmodules  CMakeLists.txt  README.md  package.json
ArduinoCore-API/: README.md
ArduinoCore-API/api/: Common.h  Print.h  Stream.cpp
cores/portduino/: Arduino.h  PortduinoGPIO.cpp  PortduinoGPIO.h  PortduinoPrint.cpp  SPIChip.h  Utility.cpp  Utility.h  dtostrf.c  logging.cpp  logging.h  main.cpp
cores/portduino/FS/: PortduinoFS.cpp  PortduinoFS.h  vfs_api.cpp
cores/portduino/linux/: GPIOChip.h  LinuxCommon.cpp  LinuxGpio.cpp  LinuxHardwareI2C.cpp  LinuxHardwareI2C.h  LinuxHardwareSPI.cpp  LinuxSerial.cpp  LinuxSerial.h  PosixFile.h  millis.cpp
cores/portduino/linux/gpio/: LinuxGPIOPin.cpp  LinuxGPIOPin.h
cores/portduino/linux/gpio/classic/: ClassicLinuxGpio.cpp
cores/portduino/linux/gpio/modern/: ModernLinuxGPIOPin.h
cores/portduino/simulated/: SimCommon.cpp  SimHardwareI2C.h  SimHardwareSPI.cpp  Utility.cpp
deprecated/: platformio.ini
example/: test.cpp
libraries/FS/: library.properties
libraries/FS/src/: PortduinoFS.cpp  PortduinoFS.h  vfs_api.h
libraries/SPI/: SPI.h
libraries/Wire/src/: Wire.h
src/: Arduino.h  SoftwareSerial.h  WString.h  itoa.cpp  main.cpp
src/example/: test.cpp
src/linux/: LinuxCommon.cpp  LinuxSerial.cpp  LinuxSerial.h  millis.cpp
src/simulated/: SimCommon.cpp  SimHardwareI2C.cpp  SimHardwareSPI.cpp
tests/: .gitignore  gpio.cpp  run.sh  spidev  spidev.cpp
